--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 
     "autoload": {
         "psr-0": {
-            "Kachkaev\\KachkaevDropboxBackupBundle": ""
+            "Kachkaev\\DropboxBackupBundle": ""
         }
     },
 
